cabal-version:       3.8
name:                clump
version:             0.1.0.0
license:             Apache-2.0
license-file:        LICENSE
author:              Rehno Lindeque
maintainer:          you@example.com
synopsis:            Buffer stdin until idle, then flush with optional prefix/suffix
category:            System
build-type:          Simple
extra-source-files:  README.md

executable clump
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >= 4.16 && < 5,
                       bytestring
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

